--- a/MetanalysisNeonics/MetanalysisNeonics.tex
+++ b/MetanalysisNeonics/MetanalysisNeonics.tex
@@ -242,6 +242,14 @@ y\textasciitilde{} Treatment Type+Nesting Area & 0.044 & 0.07 & 131 &
 treatment
 models}\label{abundance-and-concentration-kgha-for-powdergranular-treatment-models}
 
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-8-1.pdf}
+\caption{effect size of the Standardized mean difference of abundance
+for Nesting Area and concentration (Kg/Ha) for powder/granular
+aplications}
+\end{figure}
+
 \subsubsection{Comparison of models with concentrations
 {[}Kg/Ha{]}}\label{comparison-of-models-with-concentrations-kgha}
 
@@ -271,6 +279,20 @@ y\textasciitilde{} Concentration {[}Kg/Ha{]} & 0.717 & 0.00 & 50 &
 
 \subsubsection{Abundance and concentration (g/Kg) models with seed
 treatment}\label{abundance-and-concentration-gkg-models-with-seed-treatment}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-11-1.pdf}
+\caption{effect size of the Standardized mean difference of abundance
+and concentration (g/Kg)}
+\end{figure}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-12-1.pdf}
+\caption{effect size of the Standardized mean difference of abundance
+and functional group with concentration (g/Kg)}
+\end{figure}
 
 \subsubsection{Comparison of models
 {[}g/Kg{]}}\label{comparison-of-models-gkg}
@@ -303,6 +325,12 @@ y\textasciitilde{} Nesting Area+Concentration {[}g/Kg{]} & 0.228 & 0.08
 
 \subsubsection{Behaviour without
 concentration}\label{behaviour-without-concentration}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-15-1.pdf}
+\caption{Effect of behaviour by Study type}
+\end{figure}
 
 \subsubsection{Model Comparison behaviour without
 concentration}\label{model-comparison-behaviour-without-concentration}
@@ -339,10 +367,32 @@ y\textasciitilde{} Treatment Type & 0.831 & 0 & 29 & 244.788 & 3.061 &
 \bottomrule
 \end{longtable}
 
+\begin{longtable}[c]{@{}rrrlrr@{}}
+\caption{Best model for behaviour}\tabularnewline
+\toprule
+estimate & ci.ub & ci.lb & group & p & n\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+estimate & ci.ub & ci.lb & group & p & n\tabularnewline
+\midrule
+\endhead
+-2.232 & 3.012 & -7.476 & Null & 0.404 & 29\tabularnewline
+-3.960 & 2.965 & -10.884 & lab & 0.262 & 17\tabularnewline
+4.132 & 14.844 & -6.580 & semi-field & 0.450 & 12\tabularnewline
+\bottomrule
+\end{longtable}
+
 \section{Reproduction}\label{reproduction}
 
 \subsubsection{Reproduction without
 concentration}\label{reproduction-without-concentration}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-19-1.pdf}
+\caption{Effect of reproduction by order}
+\end{figure}
 
 \subsubsection{Model Comparison reproduction without
 concentration}\label{model-comparison-reproduction-without-concentration}
@@ -368,6 +418,25 @@ y\textasciitilde{} Order+Treatment Type & 0.398 & 0.20 & 90 & 977.007 &
 3.464 & 0.106\tabularnewline
 y\textasciitilde{} Order+Functional group & 0.381 & 0.14 & 90 & 978.523
 & 4.981 & 0.050\tabularnewline
+\bottomrule
+\end{longtable}
+
+\begin{longtable}[c]{@{}rrrlrr@{}}
+\caption{Best model for reproduction}\tabularnewline
+\toprule
+estimate & ci.ub & ci.lb & group & p & n\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+estimate & ci.ub & ci.lb & group & p & n\tabularnewline
+\midrule
+\endhead
+0.203 & 14.647 & -14.240 & Null & 0.978 & 90\tabularnewline
+-15.520 & 12.645 & -43.685 & Coleoptera & 0.280 & 20\tabularnewline
+13.334 & 54.197 & -27.528 & Haplotaxida & 0.522 & 18\tabularnewline
+60.687 & 111.203 & 10.171 & Hemiptera & 0.019 & 10\tabularnewline
+13.880 & 48.201 & -20.441 & Hymenoptera & 0.428 & 41\tabularnewline
+10.289 & 138.997 & -118.419 & Neuroptera & 0.875 & 1\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -581,7 +650,7 @@ estimate & ci.ub & ci.lb & group & p & n\tabularnewline
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-25-1.pdf}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-31-1.pdf}
 \caption{Effect of survival by Treatment type}
 \end{figure}
 
